<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="retrieving" translatable="false">Retrieving Distance ... </string>
    <string name="t_n_c" translatable="false"><![CDATA[By creating your %1$s account, you agree<br>to our %2$s]]></string>
    <string name="btn_terms_and_conditions" translatable="false"><![CDATA[<a href=\'terms\'><b>Terms &amp; Conditions</b></a>]]></string>
    <string name="btn_signup" translatable="false">Sign Up</string>
    <string name="public_cell_menu" translatable="false">A menu for the public cells activity.</string>
    <string name="btn_sign_in" translatable="false">Sign In</string>
    <string name="already_have_an_account" translatable="false">Already have an account?</string>
    <string name="hint_email" translatable="false">email</string>
    <string name="hint_password" translatable="false">password</string>
    <string name="hint_first_name" translatable="false">firstname</string>
    <string name="hint_last_name" translatable="false">lastname</string>
    <string name="hint_mobile" translatable="false">mobile</string>
    <string name="validation_email" translatable="false">Please enter your email</string>
    <string name="validation_password" translatable="false">Please enter your password</string>
    <string name="validation_firstname" translatable="false">Please enter your first name</string>
    <string name="validation_lastname" translatable="false">Please enter your last name</string>
    <string name="validation_mobile_number" translatable="false">Please enter your mobile number</string>
    <string name="btn_login" translatable="false">Login</string>
    <string name="btn_forgot_password" translatable="false">Forgot Password?</string>
    <string name="lbl_no_account" translatable="false">Don\'t have an account?</string>
    <string name="dialog_title_forgot_password" translatable="false">Forgot Password?</string>
    <string name="dialog_message_reset_instructions_sent" translatable="false">An email has been sent with reset instructions, please check
        your email
    </string>
    <string name="dialog_message_tap_submit" translatable="false">Please enter your email address and tap on Submit</string>
    <string name="title_alerts" translatable="false">Alerts</string>
    <string name="title_cells" translatable="false">Cells</string>
    <string name="title_friends" translatable="false">Friends</string>
    <string name="title_chats" translatable="false">Chats</string>
    <string name="dialog_title_qr_code" translatable="false">QR Code</string>
    <string name="share_qr_code_title" translatable="false">Share QR Code</string>
    <string name="share_qr_code_subject" translatable="false">My QR Code for Cell 411</string>
    <string name="share_qr_code_desc" translatable="false">Hi, feel free to scan my qr code and join me on Cell 411 network to get help in
        emergency
    </string>
    <string name="dialog_logout_message" translatable="false">Are you sure you want to logout? You will no longer be able to receive and send
        emergency alerts!
    </string>
    <string name="tab_friends" translatable="false">Friends</string>
    <string name="tab_cells" translatable="false">Cells</string>
    <string name="tab_alerts" translatable="false">Alerts</string>
    <string name="tab_map" translatable="false">Map</string>
    <string name="tab_chat" translatable="false">Chat</string>
    <string name="lbl_blood_group" translatable="false">Blood group</string>
    <string name="hint_emergency_contact_name" translatable="false">Emergency contact name</string>
    <string name="hint_emergency_contact_number" translatable="false">Emergency contact number</string>
    <string name="hint_allergies" translatable="false">Drug allergy, skin allergy, rhinitis, etc.</string>
    <string name="hint_other_medical_conditions" translatable="false">Seizures, heart problems, etc.</string>
    <string name="lbl_other_medical_conditions" translatable="false">Other medical conditions</string>
    <string name="lbl_allergies" translatable="false">Allergies</string>
    <string name="btn_video_settings" translatable="false">Video Settings</string>
    <string name="title_new_public_cell_alert" translatable="false">NEW PUBLIC CELL ALERT</string>
    <string name="txt_new_public_cell_alert_desc" translatable="false">Turning this feature on will allow you to receive Cell 411 alert
        whenever a new public cell is created nearby you. This feature requires Location Updates to be turned on.
    </string>
    <string name="title_patrol_mode" translatable="false">PATROL MODE</string>
    <string name="txt_patrol_mode_desc" translatable="false">Turning this feature on will allow you to receive Cell 411 alerts when someone
        in the patrol radius needs help. This feature requires Location Updates to be turned on.
    </string>
    <string name="title_patrol_mode_radius" translatable="false">PATROL MODE RADIUS</string>
    <string name="title_metric_selection" translatable="false">METRIC SELECTION</string>
    <string name="txt_metric_desc" translatable="false">Please select if you would like Cell 411 to use kilometers or miles as the standard
        distance unit.
    </string>
    <string name="metric_option_kilometers" translatable="false">KILOMETERS</string>
    <string name="metric_option_miles" translatable="false">MILES</string>
    <string name="title_delete_video_option" translatable="false">DELETE VIDEO OPTION</string>
    <string name="txt_delete_video_option_desc" translatable="false">Turning this feature on will enable the fake delete button on video
        alerts in Alerts tab.
    </string>
    <string name="title_gps_accurate_tracking" translatable="false">GPS ACCURATE TRACKING</string>
    <string name="txt_gps_accurate_tracking_desc" translatable="false">Turning this feature on will increase your GPS accuracy but it may
        decrease your battery life.
    </string>
    <string name="title_location_updates" translatable="false">LOCATION UPDATES</string>
    <string name="txt_location_updates_desc" translatable="false">Turning this feature on will update your location constantly so that you
        always see your updated location but it may decrease your battery life.
    </string>
    <string name="btn_blocked_users_and_spammers" translatable="false">Blocked users and spammers</string>
    <string name="attention" translatable="false">ATTENTION!</string>
    <string name="heavy_police_threat_in_effect" translatable="false">HEAVY POLICE THREAT IN EFFECT</string>
    <string name="know_your_rights" translatable="false">KNOW YOUR RIGHTS!</string>
    <string name="threat1_title" translatable="false">RECORD YOUR INTERACTION</string>
    <string name="threat1_desc" translatable="false">Cameras are your best defense against the police. If they know they are being recorded,
        they will be less tempted to violate your rights!
    </string>
    <string name="threat2_title" translatable="false">ASK "AM I BEING DETAINED?" IF YOU ARE NOT, LEAVE</string>
    <string name="threat2_desc" translatable="false">If you are not being detained, just walk away. Officers must be able to articulate their
        "reasonable suspicion" that a crime has been or is about to be committed in order to detain you.
    </string>
    <string name="threat3_title" translatable="false">DO NOT ANSWER QUESTIONS</string>
    <string name="threat3_desc" translatable="false">You are never required to talk to police. Speaking to an officer can only be used to
        hurt you. Only reveal your identity if you\'re driving.
    </string>
    <string name="threat4_title" translatable="false">NEVER CONSENT TO SEARCHES</string>
    <string name="threat4_desc" translatable="false">If they are asking to search you, your things, your car, or home, it\'s because they
        need your consent. They won\'t ask to search if they have a warrant or "probable cause". If an officer searches
        you without your permission, do not resist the search but always say you do not consent.
    </string>
    <string name="threat5_title" translatable="false">BE POLITE, BUT FIRM</string>
    <string name="or" translatable="false">OR</string>
    <string name="close" translatable="false">Close</string>
    <string name="my_profile" translatable="false">My Profile</string>
    <string name="generate_q_r_code" translatable="false">Generate Q.R. Code</string>
    <string name="scan_q_r_code" translatable="false">Scan Q.R. Code</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="menu_know_your_rights" translatable="false">Know your rights</string>
    <string name="share_this_app" translatable="false">Share this app</string>
    <string name="rate_this_app" translatable="false">Rate this app</string>
    <string name="faq_amp_tutorials" translatable="false"><![CDATA[FAQ & Tutorials]]></string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="done" translatable="false">Done</string>
    <string name="broadcast_message" translatable="false">Broadcast Message</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="action_notification" translatable="false">Notifications</string>
    <string name="mute_for_1_hour" translatable="false">1 Hour</string>
    <string name="mute_for_6_hours" translatable="false">6 Hours</string>
    <string name="mute_for_24_hours" translatable="false">24 Hours</string>
    <string name="mute_for_1_month" translatable="false">1 Month</string>
    <string name="checkbox_show_notification" translatable="false">Show notifications</string>
    <string name="permission_title" translatable="false">Access granting - %s requires access to:</string>
    <string name="permission_description" translatable="false">• Location - for sending alerts with your location, receiving
        location-specific alerts,\n\n• Camera - for sending image &amp; video alerts, recording &amp;
        streaming interaction.*\n\n• Phone - for dialing emergency service numbers via the default dialing app.*\n\n•
        Contacts - for inviting and adding your existing contacts to join Cells.*\n\n• Storage - for locally storing
        video/photo recordings, loading images from the device into the app.*
    </string>
    <string name="permission_note" translatable="false">* Requires specific user action from within the app, no automatic initiation.
    </string>
    <string name="grant_access" translatable="false">Give access</string>
    <string name="about" translatable="false">About</string>
    <string name="cell411_logo">Cell411 Logo</string>
    <string name="mail_icon">Mail Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="action_refresh">Refresh</string>
    <string name="response_from_helper">Response From Helper</string>
    <string name="helper_on_way">%s is on his way to help.</string>
    <string name="reset_data">Reset Data</string>
    <string name="no_ringtone_selected">No Ringtone Selected</string>
    <string name="select_alert_ringtone">Select Alert Ringtone</string>
    <string name="select_request_ringtone">Select Request Ringtone</string>
    <string name="select_chat_ringtone">Select Chat Ringtone</string>
    <string name="simulate_alert">Simulate Alert</string>
    <string name="dev1" tools:ignore="Typos">Dev1</string>
    <string name="dev2">Dev2</string>
    <string name="dev3">Dev3</string>
    <string name="dev4">Dev4</string>
    <string name="dev5">Dev5</string>
    <string name="dev6">Dev6</string>
    <string name="dev7">Dev7</string>
    <string name="dev8">Dev8</string>
    <string name="data_data">See data about your data.</string>
</resources>