<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/nav_my_profile"
            android:title="@string/my_profile"
            />
        <item
            android:id="@+id/nav_generate_qr"
            android:icon="@drawable/nav_generate_qr"
            android:title="@string/generate_q_r_code"
            />
        <item
            android:id="@+id/nav_scan_qr"
            android:icon="@drawable/nav_scan_qr"
            android:title="@string/scan_q_r_code"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings"
            />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/nav_notification"
            android:title="@string/notifications"
            />
        <item
            android:id="@+id/nav_know_your_rights"
            android:icon="@drawable/nav_know_your_rights"
            android:title="@string/menu_know_your_rights"
            />
        <item
            android:id="@+id/nav_share_this_app"
            android:icon="@drawable/nav_share_this_app"
            android:title="@string/share_this_app"
            />
        <item
            android:id="@+id/nav_rate_this_app"
            android:icon="@drawable/nav_rate_this_app"
            android:title="@string/rate_this_app"
            />
        <item
            android:id="@+id/nav_faq_and_tutorials"
            android:icon="@drawable/nav_faq"
            android:title="@string/faq_amp_tutorials"
            />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/nav_change_password"
            android:title="@string/change_password"
            android:visible="false"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/about"
            android:visible="true"
            />
        <item
            android:icon="@drawable/nav_settings"
            android:title="@string/broadcast_message"
            android:visible="false"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/logout"
            />
    </group>
</menu>