<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_and_register"
    android:orientation="vertical"
    >

    <ImageView
            android:id="@+id/cell411_logo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/cell411_logo"
            android:src="@drawable/logo"
            tools:ignore="ImageContrastCheck"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />

    <LinearLayout
        android:id="@+id/ll_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="username"
                    android:hint="@string/hint_email"
                    android:importantForAutofill="yes"
                    android:inputType="textEmailAddress"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_f1"
                    tools:ignore="TextContrastCheck"
                    />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/mail_icon"
                android:src="@drawable/ic_email"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="password"
                    android:hint="@string/hint_password"
                    android:importantForAutofill="yes"
                    android:inputType="textPassword"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_f1"
                    tools:ignore="TextContrastCheck"
                    />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/ic_password"
                />
        </RelativeLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/txt_btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/highlight_color"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck"
            />

    <androidx.gridlayout.widget.GridLayout
            android:id="@+id/button_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            app:columnCount="4"
            >

        <Button
                android:id="@+id/dev1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev1"
                tools:ignore="TextContrastCheck"
                />

        <Button
                android:id="@+id/dev2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev2"
                tools:ignore="TextContrastCheck"
                />

        <Button
                android:id="@+id/dev3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev3"
                tools:ignore="TextContrastCheck"
                />

        <Button
                android:id="@+id/dev4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev4"
                />

        <Button
                android:id="@+id/dev5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev5"
                tools:ignore="TextContrastCheck"
                />

        <Button
                android:id="@+id/dev6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev6"
                tools:ignore="TextContrastCheck"
                />

        <Button
                android:id="@+id/dev7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev7"
                tools:ignore="TextContrastCheck"
                />

        <Button
                android:id="@+id/dev8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev8"
                />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
            android:id="@+id/txt_btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/btn_forgot_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck"
            />

    <RelativeLayout
        android:id="@+id/rl_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        >

        <TextView
                android:id="@+id/txt_lbl_or"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_or"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck"
                />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/lbl_no_account"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck"
                />

        <TextView
                android:id="@+id/txt_btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/btn_signup"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/copblock_plug"
            />


</LinearLayout>