<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_and_register"
    android:visibility="visible"
    android:orientation="vertical"
    >


        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/permission_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/permission_description"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/txt_btn_grant_access"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/grant_access"
            android:textColor="@color/highlight_color"
            android:textStyle="bold"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/txt_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/permission_note"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"
            />
</LinearLayout>