<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alert_background_general"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.DayNight.Dialog"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@color/alert_background_criminal"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="0dp"
        >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response_from_helper"
            android:textAlignment="center"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helper_on_way"
            android:textAlignment="center"
            android:textSize="20sp"
            />


        <TextView
            android:id="@+id/txt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            />

        <Button
            android:id="@+id/txt_btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="20sp"
            />

    </LinearLayout>

</FrameLayout>